Footer section added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             <!-- cx section end -->
         </section>
         <!-- Page content area end -->
+        <!-- Footer section start -->
+        <footer class="cx-footer-section"></footer>
+        <!-- Footer section end -->
     </div>
     <!-- Main wrapper end -->
     <!-- All JavaScript files included -->
