--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
         </section>
         <!-- Page content area end -->
         <!-- Footer section start -->
-        <footer class="cx-footer-section"></footer>
+        <footer class="cx-footer-section">
+            <!-- Footer top section start -->
+            <div class="footer-top-area"></div>
+            <!-- Footer top section end -->
+            <!-- Footer Bottom section start -->
+            <div class="footer-bottom-area"></div>
+            <!-- Footer Bottom section end -->
+        </footer>
         <!-- Footer section end -->
     </div>
     <!-- Main wrapper end -->
