File has been W3 validated

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Project Name | Home</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,7 +49,9 @@
         <!-- Page content area start -->
         <section class="content">
             <!-- cx section start -->
-            <div class="cx-section"></div>
+            <div class="cx-section">
+            	<h2>Your section</h2>
+            </div>
             <!-- cx section end -->
         </section>
         <!-- Page content area end -->
