Section title class added

--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         </header>
         <!-- Header area end -->
         <!-- Slider area start -->
-        <div class="cx-slider-area"></div>
+        <div class="theme-slider-area"></div>
         <!-- Slider area end -->
         <!-- Page content area start -->
         <section class="content">
-            <!-- cx section start -->
-            <div class="cx-section">
+            <!-- Theme section start -->
+            <div class="theme-section">
             	<h2>Your section</h2>
             </div>
-            <!-- cx section end -->
+            <!-- Theme section end -->
         </section>
         <!-- Page content area end -->
         <!-- Footer section start -->
-        <footer class="cx-footer-section">
+        <footer class="theme-footer-section">
             <!-- Footer top section start -->
             <div class="footer-top-area"></div>
             <!-- Footer top section end -->
