--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/elements.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <!-- Modernizr Js -->
     <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
