Updated file structure

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     </div>
                     <div class="col-md-8">
                         <div class="menu-area">
-                            <nav class="cx-menu">
-                                <ul class="main-menu">
+                            <nav class="cx-menu text-right">
+                                <ul class="main-menu slimmenu">
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Home</a></li>
                                     <li><a href="#">Home</a></li>
@@ -51,7 +51,13 @@
         <section class="content">
             <!-- Theme section start -->
             <div class="theme-section">
-            	<h2>Your section</h2>
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h2>Your section</h2>
+                        </div>
+                    </div>
+                </div>
             </div>
             <!-- Theme section end -->
         </section>
