--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Project Name | Home</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="img/icons/favicon.png">
+    <meta name="description" content="HTML Template">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- All CSS files included -->
     <link rel="stylesheet" href="css/elements.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <!-- Modernizr Js -->
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 
 <body>
@@ -23,23 +21,7 @@
         <header class="header-area">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="logo-wrapper">
-                            <a class="logo" href="index.html">Logo</a>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="menu-area">
-                            <nav class="cx-menu text-right">
-                                <ul class="main-menu slimmenu">
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Home</a></li>
-                                    <li><a href="#">Home</a></li>
-                                </ul>
-                            </nav>
-                        </div>
-                    </div>
+                    <div class="col-md-12 col-sm-12 col-xs-12"></div>
                 </div>
             </div>
         </header>
@@ -75,7 +57,7 @@
     </div>
     <!-- Main wrapper end -->
     <!-- All JavaScript files included -->
-    <script src="js/vendor/jquery-1.12.4.min.js"></script>
+    <script src="js/jquery-3.2.1.slim.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/scripts.js"></script>
 </body>
