--- a/index.html
+++ b/index.html
@@ -36,7 +36,38 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
-                            <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident sed, aut illum ducimus dolore inventore! Laudantium, facilis, dolorum eligendi non, odio voluptate consequuntur dolores esse quisquam optio dicta nam voluptates. Culpa accusantium dolorem eligendi amet cupiditate facere error officiis ratione adipisci harum iure laudantium impedit modi cumque nihil, tempora quasi fugiat illo nam, dolores dolorum! Illo rem, optio quo, voluptatem itaque dolorum corporis voluptates, officia recusandae facilis officiis magni. Voluptates nostrum veniam eius, tempora dolorem quos itaque vero quisquam illo, voluptatibus iusto id at praesentium. Distinctio voluptatibus laborum facilis cum vel ducimus excepturi molestiae recusandae soluta, itaque, quam, libero numquam!</h2>
+                            <!-- Swiper -->
+                            <div class="swiper-container">
+                                <div class="parallax-bg" style="background-image:url(http://lorempixel.com/900/600/nightlife/2/)" data-swiper-parallax="-23%"></div>
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <div class="title" data-swiper-parallax="-10">Slide 1</div>
+                                        <div class="subtitle" data-swiper-parallax="-20">Subtitle</div>
+                                        <div class="text" data-swiper-parallax="-30">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="title" data-swiper-parallax="-10">Slide 2</div>
+                                        <div class="subtitle" data-swiper-parallax="-20">Subtitle</div>
+                                        <div class="text" data-swiper-parallax="-30">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <div class="title" data-swiper-parallax="-10">Slide 3</div>
+                                        <div class="subtitle" data-swiper-parallax="-20">Subtitle</div>
+                                        <div class="text" data-swiper-parallax="-30">
+                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla laoreet justo vitae porttitor porttitor. Suspendisse in sem justo. Integer laoreet magna nec elit suscipit, ac laoreet nibh euismod. Aliquam hendrerit lorem at elit facilisis rutrum. Ut at ullamcorper velit. Nulla ligula nisi, imperdiet ut lacinia nec, tincidunt ut libero. Aenean feugiat non eros quis feugiat.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Add Pagination -->
+                                <div class="swiper-pagination swiper-pagination-white"></div>
+                                <!-- Add Navigation -->
+                                <div class="swiper-button-prev swiper-button-white"></div>
+                                <div class="swiper-button-next swiper-button-white"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
