Added Bootstram 4 with SCSS project setup

--- a/index.html
+++ b/index.html
@@ -1,61 +1,43 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>Project Name | Home</title>
-    <link rel="icon" href="img/icons/favicon.png">
-    <meta name="description" content="HTML Template">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- All CSS files included -->
-    <link rel="stylesheet" href="css/elements.css">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document - Home</title>
+    <!-- Facicon included -->
+    <link rel="shortcut icon" href="images/icons/favicon.png" type="image/x-icon">
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" href="images/icons/apple-touch-icon.png" />
+    <!-- All CSS files included here -->
+    <link rel="stylesheet" href="css/plugins.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Custome CSS for user updates -->
+    <link rel="stylesheet" href="css/custome.css">
 </head>
-
 <body>
     <!-- Main wrapper start -->
     <div class="wrapper">
         <!-- Header area start -->
         <header class="header-area">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12"></div>
-                </div>
-            </div>
         </header>
         <!-- Header area end -->
         <!-- Slider area start -->
-        <div class="theme-slider-area"></div>
+        <div class="slider-area"></div>
         <!-- Slider area end -->
-        <!-- Page content area start -->
-        <section class="content">
-            <!-- Theme section start -->
-            <div class="theme-section">
-                <div class="container">
-                    <div class="row"></div>
-                </div>
-            </div>
-            <!-- Theme section end -->
+        <!-- Main content start -->
+        <section class="main-content">
+
         </section>
-        <!-- Page content area end -->
-        <!-- Footer section start -->
-        <footer class="theme-footer-section">
-            <!-- Footer top section start -->
-            <div class="footer-top-area"></div>
-            <!-- Footer top section end -->
-            <!-- Footer Bottom section start -->
-            <div class="footer-bottom-area"></div>
-            <!-- Footer Bottom section end -->
-        </footer>
-        <!-- Footer section end -->
+        <!-- Main content end -->
+        <!-- Footer area start -->
+        <footer class="footer-area"></footer>
+        <!-- Footer area end -->
     </div>
     <!-- Main wrapper end -->
-    <!-- All JavaScript files included -->
-    <script src="js/jquery-3.2.1.slim.min.js"></script>
+    <!-- All javascript plugins are included here -->
+    <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/scripts.js"></script>
 </body>
-
 </html>
